syntax = "proto3";

package pb;
option go_package = "./;pb";


service Request {
  rpc RequestJoin(RequestJoinCluster)returns(ResponseJoinResult);
}

message RequestJoinCluster{
  uint64 ClusterId =1;
  uint64 NodeId =2;
  string RaftAddresses=3;
  string Key=4;
  JoinRole JoinRole=5;
}
enum JoinRole{
  Follower =0;
  Witness=1;
  Observer=2;
}
enum StorageType{
  Disk =0;
  Memory=1;
 // Channel=2;
}
message ResponseJoinResult{
  int64 Status=1;
  string Msg=2;
  //uint64 NodeId=3;

}